# crewai

./: README.md  try.py
first/: README.md  pyproject.toml  setup.py
first/src/first/: crew.py  main.py  report.md
healthcare/: .env  README.md  pyproject.toml  setup.py
healthcare/src/healthcare/: __init__.py  crew.py  main.py
healthcare/src/healthcare/config/: agents.yaml  tasks.yaml
healthcare/src/healthcare/tools/: base.py
