[project]
name = "first"
version = "0.1.0"
description = "first using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
first = "first.main:run"
run_crew = "first.main:run"
train = "first.main:train"
replay = "first.main:replay"
test = "first.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
